--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
   .containter  {
     width: 100%;
     height: 100vh;
-    background-image: url(pexels-karolina-grabowska-5650040.jpg);
+    background-image: url(https://images.pexels.com/photos/5650040/pexels-photo-5650040.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260);
     background-size:  cover;
     position: relative;
    
