--- a/buyer-cart/style.css
+++ b/buyer-cart/style.css
@@ -94,3 +94,10 @@ nav .btn-cart {
     right: 100px;
 
 }
+h2 {
+  font-size: 24px;
+  cursor: pointer;
+  position: absolute;
+  bottom: 20px;
+  right: 300px;
+}
