--- a/ buyer-dashboard/style.css
+++ b/ buyer-dashboard/style.css
@@ -56,7 +56,7 @@ nav .btn-cart{
     cursor: pointer;
 }
 .section{
-   
+    background-color: #EEEEEE;
     display: flex;
     flex-wrap: wrap;
     
@@ -64,15 +64,16 @@ nav .btn-cart{
 
 }
 .section .card{
+    background-color: #fff;
    
-    background-color: #EEEEEE;
     width: 200px;
-    height: 300px;
+    height: 450px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 20px;
+   
     overflow: hidden;
+    margin:10px;
     
 }
 .section .card img {
