--- a/seller-dashboard/style.css
+++ b/seller-dashboard/style.css
@@ -56,21 +56,17 @@ nav .btn-cart {
   cursor: pointer;
 }
 .section {
-  background-color: #eeeeee;
   display: flex;
   flex-wrap: wrap;
-
   padding: 60px;
 }
 .section .card {
-  background-color: #fff;
-
+  background-color: var(--second-color);
   width: 200px;
-  height: 450px;
+  height: 350px;
   display: flex;
   flex-direction: column;
   align-items: center;
-
   overflow: hidden;
   margin: 10px;
 }
@@ -83,8 +79,9 @@ nav .btn-cart {
   font-size: 40px;
 }
 .section .card button {
-  width: 100px;
+  width: 70px;
   height: 40px;
+  margin-left: 10px;
   color: var(--second-color);
   background-color: var(--main-color);
   border: none;
